cluster/apps/dawarich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dawarich
  labels:
    goldilocks.fairwinds.com/enabled: "true"
