cluster/apps/dawarich/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich-redis
  namespace: dawarich
  labels:
    app: dawarich-redis
spec:
  replicas: 0
  selector:
    matchLabels:
      app: dawarich-redis
  template:
    metadata:
      labels:
        app: dawarich-redis
    spec:
      containers:
        - name: redis
          image: redis:8.8-alpine
          command:
            - redis-server
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: dawarich-shared
              mountPath: /data
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
          readinessProbe:
            exec:
              command:
                - redis-cli
                - --raw
                - incr
                - ping
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
      volumes:
        - name: dawarich-shared
          persistentVolumeClaim:
            claimName: dawarich-shared
