cluster/apps/dawarich/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich-sidekiq
  namespace: dawarich
  labels:
    app: dawarich-sidekiq
spec:
  replicas: 0
  selector:
    matchLabels:
      app: dawarich-sidekiq
  template:
    metadata:
      labels:
        app: dawarich-sidekiq
      annotations:
        configmap.reloader.stakater.com/reload: dawarich-sidekiq-entrypoint, dawarich-app-config
        secret.reloader.stakater.com/reload: dawarich-secret
    spec:
      containers:
        - name: dawarich-sidekiq
          image: freikin/dawarich:1.10.1
          command: ["/usr/bin/entrypoint.sh"]
          resources:
            requests:
              cpu: "150m"
              memory: "1Gi"
            limits:
              memory: "1Gi"
          volumeMounts:
            - name: dawarich-sidekiq-entrypoint
              mountPath: /usr/bin/entrypoint.sh
              subPath: entrypoint.sh
            - name: dawarich-public
              mountPath: /var/app/public
            - name: dawarich-watched
              mountPath: /var/app/tmp/imports/watched
            - name: dawarich-storage
              mountPath: /var/app/storage
      volumes:
        - name: dawarich-sidekiq-entrypoint
          configMap:
            name: dawarich-sidekiq-entrypoint
            defaultMode: 0755
        - name: dawarich-public
          persistentVolumeClaim:
            claimName: dawarich-public
        - name: dawarich-watched
          persistentVolumeClaim:
            claimName: dawarich-watched
        - name: dawarich-storage
          persistentVolumeClaim:
            claimName: dawarich-storage
