cluster/apps/dawarich/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich-app
  namespace: dawarich
spec:
  selector:
    app: dawarich-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
