cluster/apps/dawarich/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich-db
  namespace: dawarich
spec:
  selector:
    app: dawarich-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
