cluster/apps/dawarich/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich-redis
  namespace: dawarich
spec:
  selector:
    app: dawarich-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
